// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render export dialog 1`] = `
Array [
  <div
    class="backdrop visible fixed"
    data-testid="backdrop"
    role="button"
  />,
  <div
    class="container"
  >
    <div
      class="overlay small"
    >
      <section
        class="content"
      >
        <header
          class="header"
        >
          <h2 />
          <span
            aria-label="su-times"
            class="su-times clickable icon"
            role="button"
            tabindex="0"
          />
        </header>
        <article
          class="article"
        >
          <div
            class="overlay"
          >
            <div
              class="grid grid"
            >
              <div
                class="section gridSection colSpan colSpan-6 space-before-0 space-after-0"
              >
                <div
                  class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="select"
                      role="none"
                    >
                      <button
                        class="displayValue default"
                        type="button"
                      >
                        <div
                          aria-label=";"
                          class="croppedText"
                          title=";"
                        >
                          <div
                            aria-hidden="true"
                            class="front"
                          >
                            ;
                          </div>
                          <div
                            aria-hidden="true"
                            class="back"
                          >
                            <span />
                          </div>
                          <div
                            class="whole"
                          >
                            ;
                          </div>
                        </div>
                        <span
                          aria-label="su-angle-down"
                          class="su-angle-down toggle"
                        />
                      </button>
                    </div>
                    <div
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="select"
                      role="none"
                    >
                      <button
                        class="displayValue default"
                        type="button"
                      >
                        <div
                          aria-label="\\""
                          class="croppedText"
                          title="\\""
                        >
                          <div
                            aria-hidden="true"
                            class="front"
                          >
                            "
                          </div>
                          <div
                            aria-hidden="true"
                            class="back"
                          >
                            <span />
                          </div>
                          <div
                            class="whole"
                          >
                            "
                          </div>
                        </div>
                        <span
                          aria-label="su-angle-down"
                          class="su-angle-down toggle"
                        />
                      </button>
                    </div>
                    <div
                      class="errorLabel"
                    />
                  </div>
                </div>
              </div>
              <div
                class="section gridSection colSpan colSpan-6 space-before-0 space-after-0"
              >
                <div
                  class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="select"
                      role="none"
                    >
                      <button
                        class="displayValue default"
                        type="button"
                      >
                        <div
                          aria-label="\\\\"
                          class="croppedText"
                          title="\\\\"
                        >
                          <div
                            aria-hidden="true"
                            class="front"
                          >
                            \\
                          </div>
                          <div
                            aria-hidden="true"
                            class="back"
                          >
                            <span />
                          </div>
                          <div
                            class="whole"
                          >
                            \\
                          </div>
                        </div>
                        <span
                          aria-label="su-angle-down"
                          class="su-angle-down toggle"
                        />
                      </button>
                    </div>
                    <div
                      class="errorLabel"
                    />
                  </div>
                </div>
                <div
                  class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="select"
                      role="none"
                    >
                      <button
                        class="displayValue default"
                        type="button"
                      >
                        <div
                          aria-label="\\\\n"
                          class="croppedText"
                          title="\\\\n"
                        >
                          <div
                            aria-hidden="true"
                            class="front"
                          >
                            \\
                          </div>
                          <div
                            aria-hidden="true"
                            class="back"
                          >
                            <span>
                              n
                            </span>
                          </div>
                          <div
                            class="whole"
                          >
                            \\n
                          </div>
                        </div>
                        <span
                          aria-label="su-angle-down"
                          class="su-angle-down toggle"
                        />
                      </button>
                    </div>
                    <div
                      class="errorLabel"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </article>
        <footer
          class="footer"
        >
          <button
            class="button primary hasText"
            type="button"
          >
            <span
              class="buttonText"
            >
              Export
            </span>
          </button>
        </footer>
        <div
          class="snackbar"
        >
          <div
            class="snackbar error"
            role="button"
          >
            <span
              aria-label="su-exclamation-triangle"
              class="su-exclamation-triangle icon"
            />
            <div
              class="text"
            >
              <strong />
               - 
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
]
`;

exports[`Should render the list with a title 1`] = `
<div
  class="listContainer"
>
  <div
    class="listContainer"
  >
    <h1>
      Snippets
    </h1>
    <div
      class="toolbar"
    >
      <div
        class="toolbarLeft"
      >
        <div
          class="input dark left collapsed hasAppendIcon"
        >
          <div
            class="prependedContainer dark collapsed"
          >
            <span
              aria-label="su-search"
              class="su-search clickable icon dark iconClickable collapsed"
              role="button"
              tabindex="0"
            />
          </div>
          <input
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="toolbarRight"
      >
        <div>
          <button
            class="button icon"
            type="button"
          >
            <span
              aria-label="su-sort"
              class="su-sort buttonIcon"
            />
            <span
              aria-label="su-angle-down"
              class="su-angle-down dropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="list"
    >
      <section>
        <div
          class="tableContainer dark"
        >
          <table
            class="table"
          >
            <thead
              class="header"
            >
              <tr>
                <th
                  class="headerCell"
                >
                  <span>
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox light"
                      >
                        <input
                          type="checkbox"
                        />
                        <span />
                      </span>
                    </label>
                  </span>
                </th>
                <th
                  class="headerCell clickable"
                >
                  <button
                    type="button"
                  >
                    Description
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="row"
              >
                <td
                  class="cell shrink"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="1"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    <span
                      class="textBox"
                      title="Description 1"
                    >
                      Description 1
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="row"
              >
                <td
                  class="cell shrink"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="2"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    <span
                      class="textBox"
                      title="Description 2"
                    >
                      Description 2
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="pagination"
        >
          <span
            class="display"
          >
            :
          </span>
          <span>
            <div
              class="select"
              role="none"
            >
              <button
                class="displayValue dark"
                type="button"
              >
                <div
                  aria-label="10"
                  class="croppedText"
                  title="10"
                >
                  <div
                    aria-hidden="true"
                    class="front"
                  >
                    1
                  </div>
                  <div
                    aria-hidden="true"
                    class="back"
                  >
                    <span>
                      0
                    </span>
                  </div>
                  <div
                    class="whole"
                  >
                    10
                  </div>
                </div>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down toggle"
                />
              </button>
            </div>
          </span>
          <div
            class="loader"
          />
          <span>
            Page:
          </span>
          <span
            class="inputContainer"
          >
            <div
              class="input dark center"
            >
              <input
                inputmode="numeric"
                type="text"
                value="1"
              />
            </div>
          </span>
          <span
            class="display"
          >
            of 3
          </span>
          <div
            class="buttonGroup"
          >
            <button
              class="button icon button"
              type="button"
            >
              <span
                aria-label="su-angle-left"
                class="su-angle-left buttonIcon"
              />
            </button>
            <button
              class="button icon button"
              type="button"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right buttonIcon"
              />
            </button>
          </div>
        </nav>
      </section>
    </div>
  </div>
</div>
`;

exports[`Should render the list with nodes of given ListItemActions 1`] = `
<div
  class="listContainer"
>
  <div
    class="listContainer"
  >
    <h1>
      Snippets
    </h1>
    <div
      class="toolbar"
    >
      <div
        class="toolbarLeft"
      >
        <div
          class="input dark left collapsed hasAppendIcon"
        >
          <div
            class="prependedContainer dark collapsed"
          >
            <span
              aria-label="su-search"
              class="su-search clickable icon dark iconClickable collapsed"
              role="button"
              tabindex="0"
            />
          </div>
          <input
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="toolbarRight"
      >
        <div>
          <button
            class="button icon"
            type="button"
          >
            <span
              aria-label="su-sort"
              class="su-sort buttonIcon"
            />
            <span
              aria-label="su-angle-down"
              class="su-angle-down dropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="list"
    >
      <section>
        <div
          class="tableContainer dark hasButtons"
        >
          <table
            class="table"
          >
            <thead
              class="header"
            >
              <tr>
                <th
                  class="headerButtonCell headerCell"
                >
                  <span>
                    <span
                      aria-label="su-eye"
                      class="su-eye"
                    />
                  </span>
                </th>
                <th
                  class="headerCell"
                >
                  <span>
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox light"
                      >
                        <input
                          type="checkbox"
                          value=""
                        />
                        <span />
                      </span>
                    </label>
                  </span>
                </th>
                <th
                  class="headerCell clickable"
                >
                  <button
                    type="button"
                  >
                    Description
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="row"
              >
                <td
                  class="buttonCell cell"
                >
                  <div
                    class="cellContent"
                  >
                    <button
                      type="button"
                    >
                      <span
                        aria-label="su-eye"
                        class="su-eye"
                      />
                    </button>
                  </div>
                </td>
                <td
                  class="cell shrink"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="1"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    <span
                      class="textBox"
                      title="Description 1"
                    >
                      Description 1
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="row"
              >
                <td
                  class="buttonCell cell"
                >
                  <div
                    class="cellContent"
                  >
                    <button
                      type="button"
                    >
                      <span
                        aria-label="su-eye"
                        class="su-eye"
                      />
                    </button>
                  </div>
                </td>
                <td
                  class="cell shrink"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="2"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    <span
                      class="textBox"
                      title="Description 2"
                    >
                      Description 2
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="pagination"
        >
          <span
            class="display"
          >
            :
          </span>
          <span>
            <div
              class="select"
              role="none"
            >
              <button
                class="displayValue dark"
                type="button"
              >
                <div
                  aria-label="10"
                  class="croppedText"
                  title="10"
                >
                  <div
                    aria-hidden="true"
                    class="front"
                  >
                    1
                  </div>
                  <div
                    aria-hidden="true"
                    class="back"
                  >
                    <span>
                      0
                    </span>
                  </div>
                  <div
                    class="whole"
                  >
                    10
                  </div>
                </div>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down toggle"
                />
              </button>
            </div>
          </span>
          <div
            class="loader"
          />
          <span>
            Page:
          </span>
          <span
            class="inputContainer"
          >
            <div
              class="input dark center"
            >
              <input
                inputmode="numeric"
                type="text"
                value="2"
              />
            </div>
          </span>
          <span
            class="display"
          >
            of 3
          </span>
          <div
            class="buttonGroup"
          >
            <button
              class="button icon button"
              type="button"
            >
              <span
                aria-label="su-angle-left"
                class="su-angle-left buttonIcon"
              />
            </button>
            <button
              class="button icon button"
              type="button"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right buttonIcon"
              />
            </button>
          </div>
        </nav>
      </section>
    </div>
  </div>
  <div>
    item action node
  </div>
</div>
`;

exports[`Should render the list with nodes of given ToolbarActions 1`] = `
<div
  class="listContainer"
>
  <div
    class="listContainer"
  >
    <h1>
      Snippets
    </h1>
    <div
      class="toolbar"
    >
      <div
        class="toolbarLeft"
      >
        <div
          class="input dark left collapsed hasAppendIcon"
        >
          <div
            class="prependedContainer dark collapsed"
          >
            <span
              aria-label="su-search"
              class="su-search clickable icon dark iconClickable collapsed"
              role="button"
              tabindex="0"
            />
          </div>
          <input
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="toolbarRight"
      >
        <div>
          <button
            class="button icon"
            type="button"
          >
            <span
              aria-label="su-sort"
              class="su-sort buttonIcon"
            />
            <span
              aria-label="su-angle-down"
              class="su-angle-down dropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="list"
    >
      <section>
        <div
          class="tableContainer dark"
        >
          <table
            class="table"
          >
            <thead
              class="header"
            >
              <tr>
                <th
                  class="headerCell"
                >
                  <span>
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox light"
                      >
                        <input
                          type="checkbox"
                          value=""
                        />
                        <span />
                      </span>
                    </label>
                  </span>
                </th>
                <th
                  class="headerCell clickable"
                >
                  <button
                    type="button"
                  >
                    Description
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="row"
              >
                <td
                  class="cell shrink"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="1"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    <span
                      class="textBox"
                      title="Description 1"
                    >
                      Description 1
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="row"
              >
                <td
                  class="cell shrink"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="2"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    <span
                      class="textBox"
                      title="Description 2"
                    >
                      Description 2
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="pagination"
        >
          <span
            class="display"
          >
            :
          </span>
          <span>
            <div
              class="select"
              role="none"
            >
              <button
                class="displayValue dark"
                type="button"
              >
                <div
                  aria-label="10"
                  class="croppedText"
                  title="10"
                >
                  <div
                    aria-hidden="true"
                    class="front"
                  >
                    1
                  </div>
                  <div
                    aria-hidden="true"
                    class="back"
                  >
                    <span>
                      0
                    </span>
                  </div>
                  <div
                    class="whole"
                  >
                    10
                  </div>
                </div>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down toggle"
                />
              </button>
            </div>
          </span>
          <div
            class="loader"
          />
          <span>
            Page:
          </span>
          <span
            class="inputContainer"
          >
            <div
              class="input dark center"
            >
              <input
                inputmode="numeric"
                type="text"
                value="2"
              />
            </div>
          </span>
          <span
            class="display"
          >
            of 3
          </span>
          <div
            class="buttonGroup"
          >
            <button
              class="button icon button"
              type="button"
            >
              <span
                aria-label="su-angle-left"
                class="su-angle-left buttonIcon"
              />
            </button>
            <button
              class="button icon button"
              type="button"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right buttonIcon"
              />
            </button>
          </div>
        </nav>
      </section>
    </div>
  </div>
  <div>
    toolbar action node
  </div>
</div>
`;

exports[`Should render the list with the correct resourceKey 1`] = `
<div
  class="listContainer"
>
  <div
    class="listContainer"
  >
    <h1>
      Test 1
    </h1>
    <div
      class="toolbar"
    >
      <div
        class="toolbarLeft"
      >
        <div
          class="input dark left collapsed hasAppendIcon"
        >
          <div
            class="prependedContainer dark collapsed"
          >
            <span
              aria-label="su-search"
              class="su-search clickable icon dark iconClickable collapsed"
              role="button"
              tabindex="0"
            />
          </div>
          <input
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="toolbarRight"
      >
        <div>
          <button
            class="button icon"
            type="button"
          >
            <span
              aria-label="su-sort"
              class="su-sort buttonIcon"
            />
            <span
              aria-label="su-angle-down"
              class="su-angle-down dropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="list"
    >
      <section>
        <div
          class="tableContainer dark"
        >
          <table
            class="table"
          >
            <thead
              class="header"
            >
              <tr>
                <th
                  class="headerCell"
                >
                  <span>
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox light"
                      >
                        <input
                          type="checkbox"
                        />
                        <span />
                      </span>
                    </label>
                  </span>
                </th>
                <th
                  class="headerCell clickable"
                >
                  <button
                    type="button"
                  >
                    Description
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="row"
              >
                <td
                  class="cell shrink"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="1"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    <span
                      class="textBox"
                      title="Description 1"
                    >
                      Description 1
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="row"
              >
                <td
                  class="cell shrink"
                >
                  <div
                    class="cellContent"
                  >
                    <label
                      class="label"
                      tabindex="-1"
                    >
                      <span
                        class="switch checkbox dark"
                      >
                        <input
                          type="checkbox"
                          value="2"
                        />
                        <span />
                      </span>
                    </label>
                  </div>
                </td>
                <td
                  class="cell"
                >
                  <div
                    class="cellContent"
                  >
                    <span
                      class="textBox"
                      title="Description 2"
                    >
                      Description 2
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <nav
          class="pagination"
        >
          <span
            class="display"
          >
            :
          </span>
          <span>
            <div
              class="select"
              role="none"
            >
              <button
                class="displayValue dark"
                type="button"
              >
                <div
                  aria-label="10"
                  class="croppedText"
                  title="10"
                >
                  <div
                    aria-hidden="true"
                    class="front"
                  >
                    1
                  </div>
                  <div
                    aria-hidden="true"
                    class="back"
                  >
                    <span>
                      0
                    </span>
                  </div>
                  <div
                    class="whole"
                  >
                    10
                  </div>
                </div>
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down toggle"
                />
              </button>
            </div>
          </span>
          <div
            class="loader"
          />
          <span>
            Page:
          </span>
          <span
            class="inputContainer"
          >
            <div
              class="input dark center"
            >
              <input
                inputmode="numeric"
                type="text"
                value="1"
              />
            </div>
          </span>
          <span
            class="display"
          >
            of 3
          </span>
          <div
            class="buttonGroup"
          >
            <button
              class="button icon button"
              type="button"
            >
              <span
                aria-label="su-angle-left"
                class="su-angle-left buttonIcon"
              />
            </button>
            <button
              class="button icon button"
              type="button"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right buttonIcon"
              />
            </button>
          </div>
        </nav>
      </section>
    </div>
  </div>
</div>
`;
